Relativize sources